third_party/move/move-compiler/tests/move_check/typing/uninferred_type_call.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_call.move:3:9
  │
3 │         foo()
  │         ^^^^^ Cannot infer the type parameter `T` for generic function `0x8675309::M::foo`. Try providing a type parameter.

